# VRInfinity

./: CMakeLists.txt  README.md
res/: DBConfig.txt  VRInfinity.sql  account.html  adminPanel.html  booking.html  booking1.html  booking2.html  catalog_games.html  full_news.html  index.html  indexLogin.html  indexNONLogin.html  login.html  news.html  page1.html  page2.html  register.html  reset_password.html  settings.html  styles.css
res/css/: styles.css
res/js/: confirm_password.js  login_script.js  phone_format.js  script.js  time_for_booking.js  time_script.js  toggle_password.js
src/: Utf8Conv.hpp  bookingLogic.cpp  bookingLogic.h  booking_logic.h  genericHTML.cpp  genericHTML.h  getMethods.cpp  getMethods.h  localParser.cpp  localParser.h  main.cpp  parser.h  postMethods.cpp  postMethods.h  security.cpp  security.h  stringConverter.h  utility.cpp  utility.h
src/dataBase/: DBController.cpp  DBController.h  converterTimeString.h  poolControllers.cpp  poolControllers.h  users.h  usersCRUD.h  visits.h  visitsCRUD.h
src/dataBase/CRUD/: gameCRUD.h  game_vr_CRUD.h  imageNewsCRUD.h  image_news_CRUD.h  newsCRUD.h  news_CRUD.h  resetPasswordCRUD.h  reset_password_CRUD.h  service_CRUD.h  textNewsCRUD.h  text_news_CRUD.h  userCRUD.h  user_CRUD.h  visitCRUD.h  visit_CRUD.h  visits_smallhall_CRUD.h  visits_vr_CRUD.h
src/dataBase/tables/: game.h  game_vr.h  imageNews.h  image_news.h  news.h  resetPassword.h  reset_password.h  service.h  textNews.h  text_news.h  user.h  visit.h  visits_smallhall.h  visits_vr.h
